# cpp-as-is

./: .clang-format  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  README_docker.md
.github/: constants.env
.github/template/: README.md
.github/workflows/: ci.yml  codeql-analysis.yml  template-janitor.yml
cmake/: Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt  fuzz_tester.cpp
include/: CMakeLists.txt
include/cppAsIs/: CMakeLists.txt
include/cpp_as_is/: CMakeLists.txt  cpp_as_is.hpp  sample_library.hpp  utils.hpp
include/cpp_as_is/as/: as.hpp  concepts.hpp  traits.hpp
include/cpp_as_is/as/impl/: any.hpp  expected.hpp  future.hpp  identity.hpp  impl.hpp  optional.hpp  pointer.hpp  shared_ptr.hpp  unique_ptr.hpp  variant.hpp
include/cpp_as_is/is/: concepts.hpp  is.hpp  traits.hpp  utils.hpp
include/cpp_as_is/is/impl/: any.hpp  expected.hpp  future.hpp  identity.hpp  impl.hpp  optional.hpp  pointer.hpp  shared_ptr.hpp  unique_ptr.hpp  variant.hpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
test/is/: optional.cpp
